chapter8/network-policy/hello-web-ns2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-2
  name: hello-web-2
spec:
  containers:
  - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
    name: hello-web-2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-2
  name: hello-web-2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-2
  type: ClusterIP
