chapter8/network-policy/hello-web.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello
  name: hello-web
spec:
  containers:
  - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
    name: hello-web
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello-web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
  type: ClusterIP
