chapter8/network-policy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello-web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
  type: ClusterIP
