chapter8/network-policy/deny-all.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
