chapter8/network-policy/deny-app.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: ns-1
spec:
  podSelector:
    matchLabels:
      app: hello
  policyTypes:
  - Ingress
