chapter8/network-policy/pod-to-pod-across-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-allow-from-foo-ns2
  namespace: ns-1
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: hello
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          user: dev
      podSelector:
        matchLabels:
          app: foo
---
